--- a/intro-to-html/styles/text.css
+++ b/intro-to-html/styles/text.css
@@ -1,8 +1,6 @@
-<style>
-
-    p
+p
     {
-        font-family: Arial;
+        font-family: Roboto;
         margin-top: 0;
         margin-bottom: 0;
     }
@@ -60,24 +58,3 @@
     {
         text-decoration: underline;
     }
-</style>
-
-<p class = "video-title">
-    Talking Tech and AI with Google CEO Sundar Pichai!
-</p>
-
-<p class = "video-stats">
-    3.4M views &#183; 6 months ago
-</p>
-
-<p class = "video-author">
-    Marques Brownlee &#10003;
-</p>
-
-<p class = "video-description">
-    Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
-</p>
-
-<p class = " apple-text">
-    Shop early for the best selection of holiday favourites. <span class = "shop-link">Shop now</span> &gt;
-</p>
