--- a/intro-to-html/styles/textboxPractice.css
+++ b/intro-to-html/styles/textboxPractice.css
@@ -69,6 +69,7 @@ p
     padding-top: 16px;
     padding-bottom: 16px;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 .dog-image
@@ -101,4 +102,5 @@ p
     font-size: 20px;
     font-weight: bold;
     vertical-align: middle;
+    cursor: pointer;
 }
