--- a/youtubeStyles/video.css
+++ b/youtubeStyles/video.css
@@ -16,7 +16,7 @@ p
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
 }
 
 .video-info-grid
@@ -27,13 +27,14 @@ p
 
 .profile-picture
 {
-    width: 40px;
+    width: 36px;
     border-radius: 50px;
 }
 
 .thumbnail-row
 {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
+    position: relative;
 }
 
 .video-author, .video-stats
@@ -53,4 +54,47 @@ p
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+
+@media (max-width: 750px)
+{
+    .video-grid
+    {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (mas-width: 999px)
+{
+    .video-grid
+    {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px)
+{
+    .video-grid
+    {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+.video-time
+{
+    font-size: 12px;
+    font-weight: 500px;
+    padding: 4px;
+    border-radius: 2px;
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 8px;
+    right: 5px;
+}
+
+.video-title-link
+{
+    text-decoration: none;
+    color: black;
 }
