--- a/html-css-course/youtubeStyles/sidebar.css
+++ b/html-css-course/youtubeStyles/sidebar.css
@@ -1,5 +1,5 @@
-.sidebar
-{
+@media (max-width: 1200px) {
+  .sidebar {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -8,31 +8,62 @@
     width: 72px;
     z-index: 200;
     padding-top: 5px;
-}
+  }
 
-.sidebar-link
-{
+  .sidebar-link {
     height: 74px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-}
-
-.sidebar-link:hover
-{
-    background-color: rgb(235, 235, 235);
+    align-items: center;
+    flex-direction: column;
     cursor: pointer;
-}
+  }
 
-.sidebar-link img
-{
+  .sidebar-link:hover {
+    background-color: rgb(235, 235, 235);
+  }
+
+  .sidebar-link img {
     height: 24px;
     margin-bottom: 4px;
-    
+  }
+
+  .sidebar-link div {
+    font-family: Roboto, Arial;
+    font-size: 10px;
+  }
 }
 
-.sidebar-link div
-{
-    font-size: 10px;
+@media (min-width: 1200.1px) {
+  .sidebar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    top: 55px;
+    background-color: white;
+    width: 240px;
+    z-index: 200;
+    padding-top: 13px;
+  }
+
+  .sidebar-link {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 8px 24px;
+  }
+
+  .sidebar-link:hover {
+    background-color: rgb(235, 235, 235);
+  }
+
+  .sidebar-link img {
+    height: 24px;
+    margin-right: 24px;
+  }
+
+  .sidebar-link div {
+    font-family: Roboto, Arial;
+    font-size: 14px;
+  }
 }
