--- a/html-css-course/youtubeStyles/video.css
+++ b/html-css-course/youtubeStyles/video.css
@@ -49,6 +49,20 @@ p
     margin-bottom: 4px;
 }
 
+@media (min-width: 1000px) {
+    .video-title {
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+
+  @media (min-width: 1000px) {
+    .video-author,
+    .video-stats {
+      font-size: 14px;
+    }
+  }
+
 .video-grid
 {
     display: grid;
