Updated view Products when cart is empty.

--- a/javascript-course/javascript-amazon-project/styles/pages/checkout/checkout.css
+++ b/javascript-course/javascript-amazon-project/styles/pages/checkout/checkout.css
@@ -246,6 +246,7 @@
   border-radius: 5px;
   margin-top: 10px;
   box-shadow: 0 2px 5px rgba(213, 217, 217, 0.5);
+  margin-bottom: 10px;
 }
 
 .view-products-btn:hover {
@@ -255,3 +256,8 @@
 .empty-cart-text {
   margin-bottom: 15px; /* Adds space below the text */
 }
+
+.view-products-btn {
+  text-decoration: none; /* Removes the underline */
+}
+
