--- a/html-css-course/Exercises/styles/buttonPractice.css
+++ b/html-css-course/Exercises/styles/buttonPractice.css
@@ -86,7 +86,7 @@
         padding-bottom: 10px;
         padding-left: 16px;
         padding-right: 16px;
-        font-width: bold;
+        font-weight: bold;
         font-size: 15px;
         border-radius: 20px;
         margin-left: 10px;
@@ -104,7 +104,7 @@
         padding-left: 16px;
         padding-right: 16px;
         font-size: 20px;
-        font-width: bold;
+        font-weight: bold;
         border-radius: 20px;
         border-width: 2px;
         cursor: pointer;
